<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.github.didahdx.githubapp.ui.searchUsers.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_userDetailsFragment"
            app:destination="@id/userDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/userDetailsFragment"
        android:name="com.github.didahdx.githubapp.ui.userDetails.UserDetailsFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_user_details" >
        <argument
            app:argType="string"
            android:name="login"
            android:defaultValue=""
            />
        <action
            android:id="@+id/action_userDetailsFragment_to_followFragment"
            app:destination="@id/followFragment" />
        <action
            android:id="@+id/action_userDetailsFragment_to_githubRepoFragment"
            app:destination="@id/githubRepoFragment" />

    </fragment>
    <fragment
        android:id="@+id/followFragment"
        android:label="@string/follow"
        android:name="com.github.didahdx.githubapp.ui.follow.FollowFragment"
        tools:layout="@layout/fragment_follow" >
        <argument
            app:argType="string"
            android:name="login"
            android:defaultValue=""
            />

        <argument
            app:argType="boolean"
            android:name="is_following"
            android:defaultValue="true"/>
        <action
            android:id="@+id/action_followFragment_to_userDetailsFragment"
            app:destination="@id/userDetailsFragment" />

    </fragment>
    <fragment
        android:id="@+id/githubRepoFragment"
        android:name="com.github.didahdx.githubapp.ui.githubRepository.GithubRepoFragment"
        android:label="@string/repository"
        tools:layout="@layout/fragment_github_repo" >
        <argument
            app:argType="string"
            android:name="login"
            android:defaultValue=""
            />
    </fragment>


</navigation>