<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    tools:context=".ui.userDetails.UserDetailsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="66dp"
        android:layout_height="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Daniel Didah" />

    <TextView
        android:id="@+id/tv_login_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="DidahDx" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        tools:text="Bio here"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="3dp"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bio"
        tools:text="Company"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="3dp"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        tools:text="Location"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_blog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="3dp"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_web_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        tools:text="Blog"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="3dp"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_blog"
        tools:text="Email"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_twitter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="3dp"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:text="Twitter"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_click_ripple"
        android:clickable="true"
        android:drawablePadding="3dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_person"
        app:layout_constraintEnd_toStartOf="@id/tv_following"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_twitter"
        tools:text="Followers"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/background_click_ripple"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="3dp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_dot"
        app:layout_constraintStart_toEndOf="@id/tv_followers"
        app:layout_constraintTop_toBottomOf="@id/tv_twitter"
        tools:text="Following"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_repos"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/background_click_ripple"
        android:clickable="true"
        android:drawablePadding="19dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/repository"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_profile,tv_bio,tv_blog,tv_company,tv_email,
tv_followers,tv_following,tv_twitter,tv_location,tv_name,tv_repos,tv_login_name" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_results"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>